apps/jupyter/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jupyter-notebook
  annotations:
    kubernetes.io/ingress.class: traefik

    # kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: jup.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: jupyter-notebook
            servicePort: 8888
